--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,10 +1,10 @@
-#Sat Sep 19 17:36:45 EEST 2020
-javarush.last.task.key=com.javarush.task.task15.task1529
+#Tue Oct 20 13:00:47 EEST 2020
+javarush.last.task.key=com.javarush.task.task23.task2312.big18
 javarush.session.id=0a70a3ce-d4c9-455c-87eb-5737eaa33a17
 javarush.skip.set.autoscrolls=true
 javarush.user.secretkey=6842c7b2-5dca-49d9-ad4f-ebc75a7c4284
 javarush.query.filter=
-javarush.last.task.path=/home/diesudmedexpert1995/IdeaProjects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task15/task1529
+javarush.last.task.path=/home/diesudmedexpert1995/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task23/task2312
 javarush.status.filter=ANY
-javarush.quest.filter=QUEST_JAVA_CORE
-javarush.level.filter=5
+javarush.quest.filter=QUEST_JAVA_MULTITHREADING
+javarush.level.filter=3
